# DensestSubgraph

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  debug  flownetwork.cpp  flownetwork.h  graph.cpp  graph.h  index  main.cpp  nohup.out  reduction.cpp  reduction.h  test.cpp
allocation/: CMakeLists.txt  Makefile  allocation.cpp  allocation.h  cmake_install.cmake
data/: 1111.txt  AD.txt  AD1.txt  MI.txt  MR.txt  core2.txt  cores.txt  cores1.txt  cores2.txt  counter_example_for_ksapp.txt  gen.py  index.cpp  maxflow.txt  maxflow2.txt  xycores.txt  xycores1.txt
extraction/: CMakeLists.txt  Makefile  cmake_install.cmake  extraction.cpp  extraction.h
reduction/: CMakeLists.txt  Makefile  cmake_install.cmake  kspeeling.cpp  kspeeling.h  reduction.cpp  reduction.h
utility/: CMakeLists.txt  Makefile  app.cpp  app.h  args.cpp  args.h  cmake_install.cmake  flownetwork.cpp  flownetwork.h  graph.cpp  graph.h  heap.cpp  heap.h  lp.cpp  lp.h  ratioselection.cpp  ratioselection.h  types.h  wcore.cpp  wcore.h  xycore.cpp  xycore.h
verification/: CMakeLists.txt  Makefile  cmake_install.cmake  verification.cpp  verification.h
